# xiaomi_sensor_poller

./: .env  .gitignore  .secrets.toml.sample  LICENSE  README.md  config.yaml  logging.conf  pyproject.toml  pyproject.toml~  setcap_permissions.sh  settings.toml  setup.py
sensor.mitemp_bt/: README.rst  pyproject.toml  pyproject.toml~  set_bluepy_permissions.sh
sensor.mitemp_bt/xioami_poller/: .#sensorPoller.py  .secrets.toml  const.py  sensorPoller.py  settings.toml
systemd/: sensorpoller_sample.service
xiaomi_poller/: __init__.py  const.py  misensor.py  sensorPoller.py  setup.py
xioami_poller/: .gitignore  __init__.py  config.py  const.py  const.py~  sensorPoller.py  sensorPoller.py~  settings.toml
