[tool.poetry]
name = "xioami_poller"
version = "0.1.0"
description = "Xiaomi Sensor poller to MQTT. Home Assistant support"
authors = ["Mikael Andersen <andersen.mikael@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "1.5.1"
dynaconf = "3.1.2"
aioblescan = "0.2.6"
pycryptodomex = "3.9.9"
voluptuous = "0.12.0"
dt-utils="0.0.3"
numpy="1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sensorPoller = "xioami_poller.sensorPoller:main"